logs/deeperlib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/deeperlib'...
Listing './lib/python3.5/site-packages/deeperlib/api'...
Listing './lib/python3.5/site-packages/deeperlib/api/aminer'...
Listing './lib/python3.5/site-packages/deeperlib/api/dblp'...
Listing './lib/python3.5/site-packages/deeperlib/api/yelp'...
Listing './lib/python3.5/site-packages/deeperlib/core'...
Compiling './lib/python3.5/site-packages/deeperlib/core/smartcrawl.py'...
***   File "./lib/python3.5/site-packages/deeperlib/core/smartcrawl.py", line 95
    print 'budget:', 100.0 * (len(query_pool) - flagNum) / budget, '%, coverage ratio:', \
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deeperlib/core/utils.py'...
***   File "./lib/python3.5/site-packages/deeperlib/core/utils.py", line 25
    print "Your operating system is not supported now. " \
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deeperlib/data_processing'...
Compiling './lib/python3.5/site-packages/deeperlib/data_processing/hidden_data.py'...
***   File "./lib/python3.5/site-packages/deeperlib/data_processing/hidden_data.py", line 69
    print self.__resultDir + '/result_file.pkl saved successfully'
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deeperlib/entity_resolution'...
Listing './lib/python3.5/site-packages/deeperlib/estimator'...
Compiling './lib/python3.5/site-packages/deeperlib/estimator/aggregation.py'...
***   File "./lib/python3.5/site-packages/deeperlib/estimator/aggregation.py", line 62
    print 'count: ', count, ' query cost: ', query_cost
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deeperlib/estimator/sampler.py'...
***   File "./lib/python3.5/site-packages/deeperlib/estimator/sampler.py", line 61
    print 'sample num:', len(sample), ' query cost:', query_cost
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deeperlib/extensions'...
Listing './lib/python3.5/site-packages/deeperlib/extensions/Darwin_64'...
Listing './lib/python3.5/site-packages/deeperlib/extensions/Linux_32'...
Listing './lib/python3.5/site-packages/deeperlib/extensions/Linux_64'...
Listing './lib/python3.5/site-packages/deeperlib/extensions/Windows_32'...
Listing './lib/python3.5/site-packages/deeperlib/extensions/Windows_64'...
Listing './lib/python3.5/site-packages/deeperlib-0.2a0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pqdict'...
Listing './lib/python3.5/site-packages/pqdict-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rauth'...
Listing './lib/python3.5/site-packages/rauth-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
